--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
     "@react-spring/parallax": "^9.5.5",
     "@testing-library/jest-dom": "^5.16.5",
