--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-select": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "react-spring": "^9.5.5",
     "web-vitals": "^2.1.4"
